# crewai-demo

.cursor/rules/: general-instructions.mdc
ai_crew/: .env.example  README.md  main.py  pyproject.toml  report-1.md  report-2.md  report-3.md  report.md
ai_crew/src/ai_crew/: crew.py  main.py
api/: .gitignore  main.py
ui/: package-lock.json
