[project]
name = "ai_crew"
version = "0.1.0"
description = "ai-crew using crewAI"
authors = [{ name = "Gayashan Wagachchi", email = "gayashan4lk@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "langchain-anthropic>=0.1.0",
    "python-dotenv>=0.20.0"
]

[project.scripts]
ai_crew = "ai_crew.main:run"
run_crew = "ai_crew.main:run"
train = "ai_crew.main:train"
replay = "ai_crew.main:replay"
test = "ai_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
